﻿v1.2.4

System
* Triggers
** Fixed: An issues with "playerIDBuffRemove" styles not initializing correctly. (I have no idea how this didn't error during Conclave)
* Buffs
** Change: Cached buffs will no longer retrieve their data lists more than once. (CPU Optimization)

Ready Check
* Change: Optimized CPU usage while the Ready Check system is disabled.
* Change: Optimized CPU usage while the Ready Check display is hidden.

Infernal Dawn
* Ember Conclave
** New: Alert added for Infected Wounds.

Primeval Feast
* Lord Twyl
** New: Added a stop trigger to Frozen Nova interrupts.
** Change: Mechanic Spy now displays the player targetted at the start of the encounter for the duration.

----
v1.2.3

New: Ready Check
* New: Added option to auto-hide/show while in combat.
* New: Added option to auto-hide/show while playing solo.
* New: Added option to auto-hide/show when a Rift Ready Check is in progress.
* New: Displays Rift Ready Check status before the players name when a Ready Check is in progress.
* New: Adjust the size of the Ready Check display using the mouse-wheel.
* New: Lists all Raid/Party members Health and Mana/Power/Energy.
* New: Lists KBM versions for each Raid/Party member (if available.)
* New: Lists Soul Vitality for each Raid/Party member.
* New: Lists Food buffs on each Raid/Party member. (See available Food types - to be expanded)
* New: Lists Potions/Vials used by each Raid/Party member. (See available Potions - to be expanded)
* New: Lists Weapon Stones used by each Raid/Party member. (See available Stones - to be expanded)
* New: Lists Current and Max Planar charges for each Raid/Party member.
* New: Option to disable/enable the display in the options window.
* New: Toggle the Ready Check display state via the slash command /kbmreadycheck. (This will not change auto-settings, but instead change its current display state)