@@ -9,7 +9,7 @@ Author = "Paul Snart"
 Website = "http://twitter.com/#!/psnart"
 Email = "snarty@gmail.com"
 
-Version = "0.0.9"
+Version = "0.1.0"
 
 Environment = "1.9"
 
@@ -18,7 +18,8 @@ RunOnStartup = {
 }
 
 SavedVariables = {
-	KBMRCM_Settings = "global",
+	KBMRCM_Settings = "account",
+	chKBMRCM_Settings = "character",
 }
 
 Dependencies = {
